--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Mateus Leal",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mongoose": "^7.0.1",
     "nodemon": "^2.0.21"
